--- a/templates/habitos.html
+++ b/templates/habitos.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Pancomido - Hábitos y Tareas</title>
-<link rel="stylesheet" href="/html/styles/styles.css">
+<link rel="stylesheet" href="/static/styles/styles.css">
 </head>
 <body>
 
